--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 				
 				<div class="about-content">
 					<h3>Sandeep Baldawa</h3>
-					<p style="text-align: justify;">Sandeep Baldawa has over 20 years of experience specializing in Backend development, Build & Release, Infrastructure development, Test Automation(Design/Architecture/Development), Product Development, Lead Engineer, Virtualization, Data Loss Prevention, distributed systems, performance/integration testing, multiprocessors, Kubernetes, VMware, Docker, Operating Systems. He holds a MS degree in Computer Engineering from the The University of Texas at Dallas.</p>
+					<p style="text-align: justify;">Sandeep Baldawa has over 20 years of experience specializing in Backend development, Build & Release, Infrastructure development, Test Automation(Design/Architecture/Development), Product Development, Lead Engineer, Virtualization, Data Loss Prevention, distributed systems, performance/integration testing, multiprocessors, Kubernetes, VMware, Docker, Operating Systems. He holds a MS degree in Computer Engineering from the The University of Texas at Dallas and a bachelor's degree in Electronics and Communication.</p>
 				</div>
 			</div>
 			<div class="about-card">
