style.css updated, index & about

--- a/about.html
+++ b/about.html
@@ -21,8 +21,9 @@
 			<ul class="nav-links">
 				<li><a href="index.html#home">Home</a></li>
 				<li><a href="index.html#services">Services</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="index.html#contact">Contact</a></li>
+				<li><a href="applications.html">Applications</a></li>
+				<li><a href="#about.html">About</a></li>
+				<li><a href="index.html#contact">Contact</a></li> <!-- corrected this line -->
 			</ul>
 			<div class="menu-toggle">☰</div>
 		</nav>
@@ -49,7 +50,7 @@
 				
 				<div class="about-content">
 					<h3>Sandeep Baldawa</h3>
-					<p style="text-align: justify;">Sandeep Baldawa has over 20 years of experience specializing in Backend development, Build & Release, Infrastructure development, Test Automation(Design/Architecture/Development), Product Development, Lead Engineer, Virtualization, Data Loss Prevention, distributed systems, performance/integration testing, multiprocessors, Kubernetes, VMware, Docker, Operating Systems. He holds a MS degree in Computer Engineering from the The University of Texas at Dallas and a bachelor's degree in Electronics and Communication.</p>
+					<p style="text-align: justify;">Sandeep Baldawa has over 20 years of experience specializing in Backend development, Build & Release, Infrastructure development, Test Automation(Design/Architecture/Development), Product Development, Lead Engineer, Virtualization, Data Loss Prevention, distributed systems, performance/integration testing, multiprocessors, Kubernetes, VMware, Docker, Operating Systems. He holds a MS degree in Computer Engineering from the The University of Texas at Dallas.</p>
 				</div>
 			</div>
 			<div class="about-card">
@@ -62,6 +63,13 @@
 					<p style="text-align: justify;">Sohil is a highly accomplished security industry veteran with over 18 years of experience in Security risk Consulting, Managed Security Operations, GRC, Cyber Security, Data Privacy and protection, Strategic budgeting and planning cyber resilience, Security Culture Transformation, Cyber Threat Analytics, Cloud Security, Enterprise Software Architecture Governance, Information Technology, Banking, Retail, Automobile, Data Centre, and more across geographies India, Singapore, UK, and the Middle East. He holds a master’s degree in network security from Glasgow Caledonian University, UK, and a bachelor's degree in Electronics and Communication.</p>
 				</div>
 			</div>
+		</div>
+	</section>
+	<!-- About Section -->
+	<section id="location" class="location">
+		<h2>Our Locations</h2>
+		<div class="location-container">
+			
 		</div>
 	</section>
 
