--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>FessiT Solutions Pvt. Ltd.</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Adobe Fonts for Avenir Next LT Pro (replace with your kit ID) -->
-	
+	<link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=DM Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Fixed Header with Navigation -->
@@ -21,6 +22,7 @@
 			<ul class="nav-links">
 				<li><a href="#home">Home</a></li>
 				<li><a href="#services">Services</a></li>
+				<li><a href="applications.html">Applications</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
@@ -57,8 +59,9 @@
             </div>
         </section>
 
-        <!-- Services Section -->
+		<!-- Services Section -->
         <section id="services" class="services">
+			<div></div>
 			<h2>Our Services</h2>
 			<div class="services-container">
 				<div class="service-card">
@@ -91,7 +94,7 @@
 					<img src="Hardware-dev-card.jpg" alt="Service 3" class="service-image">
 					<div class="service-content">
 						<h3>Hardware Developemnt</h3>
-						<p style="text-align: justify;">Hardware design services for end-to-end hardware design, from concept to prototyping, ensuring efficient, reliable, and cost-effective solutions for IoT, automotive, medical, and industrial applications. Our hardware designs that meet industry standards, enhance system performance, and support future scalability.</p>
+						<p style="text-align: justify;">Hardware design services for end-to-end hardware design, from concept to prototyping, ensuring efficient, reliable & cost-effective solutions for IoT, automotive, medical & industrial applications. Our hardware designs that meet industry standards, enhance system performance & support future scalability.</p>
 					</div>
 					<div class="learn-more-container">
 						<a href="#" class="learn-more">
@@ -103,7 +106,6 @@
 			</div>
 		</section>
 		<section id="contact" class="contact">
-			<h2>   </h2>
 			<div class="contact-container">
 				<div class="contact-layout">
 					<div class="contact-content">
