--- a/applications.html
+++ b/applications.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>About</title>
+	<title>Applications</title>
 	<link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Special Gothic Expanded One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Josefin Sans&display=swap" rel="stylesheet">
