spelling mistake in application.html

--- a/applications.html
+++ b/applications.html
@@ -44,7 +44,7 @@
 				</div>
 				<div class="appflash-right-column">
 					<h2>IoT & Digital Transformation</h2>
-					<p>we empower businesses to embrace the future through cutting-edge IoT and Digital Transformation technologies. Our solutions are designed to bridge the gap between physical systems and digital intelligence — enabling real-time visibility, control, and optimization across diverse industries. Key Application Areas include Smart Manufacturing, Smart Cities, Automotive, Connected Agriculture, Energy & Utilities, Healthcare, Supply Chain & Logistics and Buildings & Infrastructure...</p>
+					<p>We empower businesses to embrace the future through cutting-edge IoT and Digital Transformation technologies. Our solutions are designed to bridge the gap between physical systems and digital intelligence — enabling real-time visibility, control, and optimization across diverse industries. Key Application Areas include Smart Manufacturing, Smart Cities, Automotive, Connected Agriculture, Energy & Utilities, Healthcare, Supply Chain & Logistics and Buildings & Infrastructure...</p>
 					<!-- Button with Right Arrow -->
 					<!-- Rounded button -->
 					<a href="#applications" class="appflash-button">
