script.js is added in about and application html pages

--- a/applications.html
+++ b/applications.html
@@ -139,6 +139,8 @@
 				</div>
 			</div>
 		</section>
-</appflashmain>
+	</appflashmain>
+	<!-- Include script at the end -->
+    <script src="script.js"></script>
 </body>
 </html>
