index.html core-strengths-container section updated

--- a/index.html
+++ b/index.html
@@ -45,15 +45,7 @@
                     <h2>Our Core Strengths</h2>
                     <p>We measure our company performance and customer satisfaction based on our core strengths and always put constant efforts to improve on these core strengths to provide quality, timely deliverables and aiming for long term relationship with the customers. We believe in</p>
                     <div class="core-strengths-container">
-						<ul class="core-strengths">
-							<li><span class="icon">⚡</span> <span class="handwritten">Faster</span></li>
-							<li><span class="icon">⚙️</span> <span class="handwritten">Effective</span></li>
-							<li><span class="icon">🧠</span> <span class="handwritten">Smarter</span></li>
-							<li><span class="icon">📈</span> <span class="handwritten">Scalable</span></li>
-							<li><span class="icon">💡</span> <span class="handwritten">Innovative</span></li>
-						</ul>
-						<img src="IoT7.jpg" alt="Technologies Image" class="core-strengths-image" />
-						<div class="core-strengths-text handwritten">Technologies</div>
+						<img src="fessit_principles.png" alt="Technologies Image" class="core-strengths-image" />
 					</div>
                 </div>
             </div>
