appflash dots and related code updated

--- a/applications.html
+++ b/applications.html
@@ -108,6 +108,9 @@
 				<!-- Arrows go outside slider but inside the wrapper -->
 				<div class="appflash-nav">
 				  <span class="appflash-nav-arrow left material-icons">keyboard_arrow_left</span>
+				  <div class="appflash-dots">
+					<!-- Dots will be generated dynamically via JavaScript -->
+				  </div>
 				  <span class="appflash-nav-arrow right material-icons">keyboard_arrow_right</span>
 				</div>
 			  </div>
