--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FessiT Solutions Pvt. Ltd.</title>
-    <link rel="stylesheet" href="styles.css">
+    
     <!-- Adobe Fonts for Avenir Next LT Pro (replace with your kit ID) -->
-	<link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=DM Sans&display=swap" rel="stylesheet">
+	<link rel="preload" href="fonts/RedHatDisplay-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+	<link rel="preload" href="fonts/RedHatDisplay-Italic-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Fixed Header with Navigation -->
@@ -63,7 +64,7 @@
 						<p style="text-align: justify;">Software development services involving Digital Transformation, IoT, Automotive, Medical, and Industry 4.0. We specialized in designing and optimizing systems that provides scalability, performance and integrate seamlessly with cloud services, ensuring efficiency, scalability, and real-time data management.</p>
 					</div>
 					<div class="learn-more-container">
-						<a href="#" class="learn-more">
+						<a href="software_services.html" class="learn-more">
 							LEARN MORE
 							<span class="arrow">&gt;</span> <!-- Greater-than symbol as the right arrow -->
 						</a>
@@ -76,7 +77,7 @@
 						<p style="text-align: justify;">Firmware development and customization that power IoT devices, ensuring efficient communication, real-time processing, reliable operation in diverse environments. From low-level device control to cloud integration, the firmware solutions that are secure, scalable, and performance-driven for a wide range of IoT applications.</p>
 					</div>
 					<div class="learn-more-container">
-						<a href="#" class="learn-more">
+						<a href="firmware_services.html" class="learn-more">
 							LEARN MORE
 							<span class="arrow">&gt;</span> <!-- Greater-than symbol as the right arrow -->
 						</a>
@@ -89,7 +90,7 @@
 						<p style="text-align: justify;">Hardware design services for end-to-end hardware design, from concept to prototyping, ensuring efficient, reliable & cost-effective solutions for IoT, automotive, medical & industrial applications. Our hardware designs that meet industry standards, enhance system performance & support future scalability.</p>
 					</div>
 					<div class="learn-more-container">
-						<a href="#" class="learn-more">
+						<a href="hardware_services.html" class="learn-more">
 							LEARN MORE
 							<span class="arrow">&gt;</span> <!-- Greater-than symbol as the right arrow -->
 						</a>
