firmware services html page added and related images style cchanges

--- a/software_services.html
+++ b/software_services.html
@@ -12,6 +12,7 @@
 	<link rel="preload" href="fonts/RedHatDisplay-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin="anonymous">
 	<link rel="preload" href="fonts/RedHatDisplay-Italic-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 	<!-- 🔁 Copy-paste this header from your main file -->
@@ -51,18 +52,30 @@
 					<div class="tile tile-frontend">
 						<h3>Frontend Development</h3>
 						<p>We design intuitive, responsive, and user-friendly interfaces that enhance user experience and engagement. Our frontend engineers work with modern frameworks such as React, Angular, and Vue.js, ensuring fast, dynamic, and accessible web applications optimized for all devices.</p>
+						<a href="#front-dev" class="firmware-flash-button">
+							LEARN MORE <span class="material-icons">keyboard_arrow_right</span>
+						</a>
 					</div>
 					<div class="tile tile-backend">
 						<h3>Backend Development</h3>
 						<p>Our backend development services focus on building secure, robust, and maintainable server-side applications. Leveraging technologies like Node.js, Python (Django/Flask), .NET, and Java Spring Boot, we implement efficient business logic, API services, and database integrations tailored to your operational needs.</p>
+						<a href="#backend-dev" class="firmware-flash-button">
+							LEARN MORE <span class="material-icons">keyboard_arrow_right</span>
+						</a>
 					</div>
 					<div class="tile tile-cloud">
 						<h3>Cloud-Native Development</h3>
 						<p>FessiT helps businesses modernize their architecture with cloud-native solutions. We design and deploy scalable applications using AWS, Microsoft Azure, and Google Cloud Platform, enabling microservices, serverless computing, and container orchestration with Docker and Kubernetes for greater agility and performance.</p>
+						<a href="#cloud-dev" class="firmware-flash-button">
+							LEARN MORE <span class="material-icons">keyboard_arrow_right</span>
+						</a>
 					</div>
 					<div class="tile tile-integration">
 						<h3>System Integration</h3>
 						<p>Seamless integration is key to ensuring different systems work together cohesively. Our team specializes in connecting enterprise systems, third-party APIs, IoT devices, and cloud platforms—enabling real-time data flow and unified operations using industry-standard protocols and custom integration layers.</p>
+						<a href="#sys-int" class="firmware-flash-button">
+							LEARN MORE <span class="material-icons">keyboard_arrow_right</span>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -71,7 +84,7 @@
 	</section>
 	<!-- Services Section -->
 	<section id="servicesinfo" class="services-info">
-		<div class="services-info-content">
+		<div id="front-dev" class="services-info-content">
 			<div class="services-left-column">
 				<h2>Frontend Development</h2>
 				<p>We design intuitive, responsive, and user-friendly interfaces that enhance user experience and engagement. Our frontend engineers work with modern frameworks such as React, Angular, and Vue.js, ensuring fast, dynamic, and accessible web applications optimized for all devices.</p>
@@ -115,7 +128,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="services-info-content">
+		<div id="backend-dev" class="services-info-content">
 			<div class="services-left-column">
 				<h2>Backend Development</h2>
 				<p>Our backend development services focus on building secure, robust, and maintainable server-side applications. Leveraging technologies like Node.js, Python (Django/Flask), .NET, and Java Spring Boot, we implement efficient business logic, API services, and database integrations tailored to your operational needs.</p>
@@ -159,7 +172,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="services-info-content">
+		<div id="cloud-dev" class="services-info-content">
 			<div class="services-left-column">
 				<h2>Cloud Development</h2>
 				<p>FessiT helps businesses modernize their architecture with cloud-native solutions. We design and deploy scalable applications using AWS, Microsoft Azure, and Google Cloud Platform, enabling microservices, serverless computing, and container orchestration with Docker and Kubernetes for greater agility and performance.</p>
@@ -203,7 +216,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="services-info-content">
+		<div id="sys-int" class="services-info-content">
 			<div class="services-left-column">
 				<h2>System Integration</h2>
 				<p>Seamless integration is key to ensuring different systems work together cohesively. Our team specializes in connecting enterprise systems, third-party APIs, IoT devices, and cloud platforms—enabling real-time data flow and unified operations using industry-standard protocols and custom integration layers.</p>
