--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<img src="firmware-dev-card1.jpg" alt="Service 2" class="service-image">
 					<div class="service-content">
 						<h3>Firmware Development</h3>
-						<p style="text-align: justify;">Firmware development and customization that power IoT devices, ensuring efficient communication, real-time processing, reliable operation in diverse environments. From low-level device control to cloud integration, the firmware solutions that are secure, scalable, and performance-driven for a wide range of IoT applications.</p>
+						<p style="text-align: justify;">Firmware development and customization that power IoT devices, ensuring efficient communication, real-time processing, reliable operation in diverse environments. Solutions for low-level device control to cloud integration that are secure, scalable & performance-driven for a wide range of IoT applications.</p>
 					</div>
 					<div class="learn-more-container">
 						<a href="firmware_services.html" class="learn-more">
