--- a/firmware_services.html
+++ b/firmware_services.html
@@ -4,7 +4,7 @@
 
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Applications</title>
+	<title>Firmware Development</title>
 	  
 	<!-- Load Red Hat Display first -->
 	<!-- Now load your stylesheet -->
