contact details are updated...

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
 	<title>About</title>
 	<link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+	<!-- Google Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
@@ -22,7 +24,7 @@
 				<li><a href="index.html#home">Home</a></li>
 				<li><a href="index.html#services">Services</a></li>
 				<li><a href="applications.html">Applications</a></li>
-				<li><a href="#about.html">About</a></li>
+				<li><a href="about.html#about">About</a></li>
 				<li><a href="index.html#contact">Contact</a></li> <!-- corrected this line -->
 			</ul>
 			<div class="menu-toggle">☰</div>
@@ -67,12 +69,56 @@
 	</section>
 	<!-- About Section -->
 	<section id="location" class="location">
-		<h2>Our Locations</h2>
+		<h2>FessiT Solutions Pvt. Ltd.</h2>
 		<div class="location-container">
+			<div class="location-card">
+				<div class="location-content">
+					<h3>Registered Office</h3>
+					<div class="info-container">
+						<div class="address-info">
+							<p>No 14,2nd main 18th Cross, Byrappa layout</p>
+							<p>Bangalore, Bangalore North, Karnataka</p>
+							<p>India, 560045</p>
+						</div>
+						<div class="contact-info-container">
+							<div class="contact-info">
+								<span class="material-icons phone-icon">phone</span>
+								<span class="contact-text">+91 98864 97114</span>
+							</div>
+							<div class="contact-info">
+								<span class="material-icons email-icon">email</span>
+								<span class="contact-text">info@fessitsol.com</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 			
+			<div class="location-card">
+				<div class="location-content">
+					<h3>USA Office</h3>
+					<div class="info-container">
+						<div class="address-info">
+							<p>3215 Clifford Cir, Pleasanton</p>
+							<p>CA 94588, USA</p>
+						</div>
+						<div class="contact-info-container">
+							<div class="contact-info">
+								<span class="material-icons phone-icon">phone</span>
+								<span class="contact-text">+1 (404) 747 1477</span>
+							</div>
+							<div class="contact-info">
+								<span class="material-icons email-icon">email</span>
+								<span class="contact-text">info@fessitsol.com</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 	<!-- Include script at the end -->
     <script src="script.js"></script>
+	
 </body>
 </html>
