--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel="preload" href="fonts/RedHatDisplay-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin="anonymous">
 	<link rel="preload" href="fonts/RedHatDisplay-Italic-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
+	<!-- Google Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <!-- Fixed Header with Navigation -->
@@ -99,7 +101,46 @@
 			</div>
 		</section>
 		<section id="contact" class="contact">
+			<div class ="FessiTName">FessiT Solutions Pvt. Ltd.</div>
 			<div class="contact-container">
+			    <div class="generalcontact-layout">
+					<div class="generalcontact-container">
+						<div class="generalcontact-card">
+							<div class="generalcontact-content">
+								<h3>General Enquiry</h3>
+								<div class="info-container">
+									<div class="contact-info-container">
+										<div class="contact-info">
+											<span class="material-icons phone-icon">phone</span>
+											<span class="contact-text">+91 98864 97114</span>
+										</div>
+										<div class="contact-info">
+											<span class="material-icons email-icon">email</span>
+											<span class="contact-text">info@fessitsol.com</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="generalcontact-card">
+							<div class="generalcontact-content">
+								<h3>For Support</h3>
+								<div class="info-container">
+									<div class="contact-info-container">
+										<div class="contact-info">
+											<span class="material-icons phone-icon">phone</span>
+											<span class="contact-text">+91 98864 97114</span>
+										</div>
+										<div class="contact-info">
+											<span class="material-icons email-icon">email</span>
+											<span class="contact-text">support@fessitsol.com</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>	
+				</div>
 				<div class="contact-layout">
 					<div class="contact-content">
 						<h3>Contact Us</h3>
