--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<div class="service-card">
 					<img src="Hardware-dev-card.jpg" alt="Service 3" class="service-image">
 					<div class="service-content">
-						<h3>Hardware Developemnt</h3>
+						<h3>Hardware Development</h3>
 						<p style="text-align: justify;">Hardware design services for end-to-end hardware design, from concept to prototyping, ensuring efficient, reliable & cost-effective solutions for IoT, automotive, medical & industrial applications. Our hardware designs that meet industry standards, enhance system performance & support future scalability.</p>
 					</div>
 					<div class="learn-more-container">
