--- a/firmware_services.html
+++ b/firmware_services.html
@@ -20,7 +20,7 @@
 		<nav class="navbar">
 			<div class="logo-container">
 				<div class="logo">
-					<img src="fessitlogo.png" alt="FessiT Solutions Logo" class="logo-img">
+					<img src="FessiTLogoTrans.png" alt="FessiT Solutions Logo" class="logo-img">
 				</div>
 				<div class="tagline">Force behind your transformation</div>
 			</div>
