--- a/about.html
+++ b/about.html
@@ -76,9 +76,9 @@
 					<h3>Registered Office</h3>
 					<div class="info-container">
 						<div class="address-info">
-							<p>No 14,2nd main 18th Cross, Byrappa layout</p>
-							<p>Bangalore, Bangalore North, Karnataka</p>
-							<p>India, 560045</p>
+							<p>No 2, 5th Cross, First Floor, Muninagappa Layout</p>
+							<p>Kavalbyrasandra, Bangalore, Karnataka</p>
+							<p>India, 560032</p>
 						</div>
 						<div class="contact-info-container">
 							<div class="contact-info">
