--- a/about.html
+++ b/about.html
@@ -76,9 +76,9 @@
 					<h3>Registered Office</h3>
 					<div class="info-container">
 						<div class="address-info">
-							<p>No 2, 5th Cross, First Floor, Muninagappa Layout</p>
-							<p>Kavalbyrasandra, Bangalore, Karnataka</p>
-							<p>India, 560032</p>
+							<p>1st Floor, Anthill IQ, 20, Cunningham Rd,</p>
+							<p>Vasanth Nagar, Bengaluru, Karnataka</p>
+							<p>India, 560052</p>
 						</div>
 						<div class="contact-info-container">
 							<div class="contact-info">
