Floor is updated

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 					<h3>Registered Office</h3>
 					<div class="info-container">
 						<div class="address-info">
-							<p>1st Floor, Anthill IQ, 20, Cunningham Rd,</p>
+							<p>2nd Floor, Anthill IQ, 20, Cunningham Rd,</p>
 							<p>Vasanth Nagar, Bengaluru, Karnataka</p>
 							<p>India, 560052</p>
 						</div>
